--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   provider: ^3.0.0
   http: ^0.12.0+2
+  flutter_local_notifications: ^1.1.5+1
 
 dev_dependencies:
   flutter_test:
